--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
         <h2>Precios</h2>
         <div class="precios-grid minimal">
           <div class="precio-card minimal">
-            <h3>Página web básica</h3>
+            <h3>Página web</h3>
             <div class="precio">100€</div>
           </div>
           <div class="precio-card minimal">
-            <h3>Web + servidor y gestión</h3>
+            <h3>Servidor + página de gestión</h3>
             <div class="precio">220€</div>
           </div>
           <div class="precio-card minimal">
-            <h3>Redes sociales, logotipo y marca</h3>
+            <h3>Creación de redes sociales, logotipo y marca</h3>
             <div class="precio">50€</div>
           </div>
         </div>
