--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FerCueA | Portfolio Minimal</title>
+    <title>FerCueA | Desarrollo Web</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
   </head>
   <body>
     <header class="main-header minimal header-center header-nav-flex">
-      <div class="logo">FerCueA</div>
-      <nav>
-        <a
-          href="https://www.instagram.com/aleixofdezcuevas/"
-          target="_blank"
-          class="btn-minimal-hero nav-btn-minimal"
-          >Instagram</a
-        >
-      </nav>
+      <div class="logo">Aleixo Fdez Cuevas</div>
     </header>
 
     <main>
@@ -28,24 +24,55 @@
             profesional.<br />
             Soluciones digitales a tu medida.
           </p>
-          <a href="mailto:FerCueA90@protonmail.com" class="btn-minimal-hero">
+          <a href="#" class="btn-minimal-hero" id="btn-contacto">
             Contáctame
             <span class="arrow-icon" aria-hidden="true">→</span>
           </a>
+          <div
+            id="dialogo-contacto"
+            class="dialogo-contacto"
+            style="display: none"
+          >
+            <div class="dialogo-contacto-contenido">
+              <button class="cerrar-dialogo" id="cerrar-dialogo">×</button>
+              <h3>Contactar por:</h3>
+              <a
+                href="https://wa.me/34628230716"
+                target="_blank"
+                class="btn-minimal-link"
+                style="margin-bottom: 0.7em; display: block"
+                >WhatsApp</a
+              >
+              <a
+                href="https://www.instagram.com/aleixofdezcuevas/"
+                target="_blank"
+                class="btn-minimal-link"
+                style="margin-bottom: 0.7em; display: block"
+                >Instagram</a
+              >
+              <a
+                href="mailto:fercuea90@protonmail.com"
+                class="btn-minimal-link"
+                style="display: block"
+                >Correo</a
+              >
+            </div>
+          </div>
         </div>
       </section>
 
       <section class="proyectos minimal" id="proyectos">
-        <h2>Proyectos</h2>
+        <h2><i class="bi bi-folder2-open icono-min"></i> Proyectos</h2>
         <div class="proyectos-grid minimal">
           <div class="proyecto-card minimal">
             <div class="proyecto-header">
+              <i class="bi bi-briefcase icono-min"></i>
               <span class="proyecto-titulo">AlvaroG</span>
             </div>
             <div class="tecnologias-texto">
-              <span>HTML</span>
-              <span>CSS</span>
-              <span>JS</span>
+              <i class="bi bi-filetype-html icono-min"></i><span>HTML</span>
+              <i class="bi bi-palette icono-min"></i><span>CSS</span>
+              <i class="bi bi-lightning-charge icono-min"></i><span>JS</span>
             </div>
             <div class="preview-proyecto-wrapper">
               <div class="skeleton-loader"></div>
@@ -67,45 +94,105 @@
               ></iframe>
             </div>
             <p class="proyecto-desc">
-              Página web minimalista para un osteópata que busca presencia
-              online. Incluye presentación de servicios, precios y contacto de
-              forma clara y profesional.
+              <i class="bi bi-card-text icono-min"></i> Página web minimalista
+              para un osteópata que busca presencia online. Incluye presentación
+              de servicios, precios y contacto de forma clara y profesional.
             </p>
             <a
               href="https://alvarog.netlify.app/"
               class="btn-minimal-link"
               target="_blank"
-              >Ver proyecto</a
+              ><i class="bi bi-box-arrow-up-right icono-min"></i> Ver
+              proyecto</a
             >
           </div>
         </div>
       </section>
 
       <section class="precios minimal" id="precios">
-        <h2>Precios</h2>
+        <h2><i class="bi bi-cash-coin icono-min"></i> Precios</h2>
         <div class="precios-grid minimal">
-          <div class="precio-card minimal">
+          <div class="precio-card minimal precio-popular">
+            <div class="precio-icono">
+              <i class="bi bi-globe icono-min"></i>
+            </div>
             <h3>Página web</h3>
             <div class="precio">100€</div>
+            <p class="precio-desc">
+              <i class="bi bi-laptop icono-min"></i> Web profesional, responsive
+              y optimizada para tu negocio o marca personal.
+            </p>
+            <button
+              class="btn-minimal-link btn-precio-contacto"
+              onclick="document.getElementById('btn-contacto').click()"
+            >
+              <i class="bi bi-arrow-right-circle icono-min"></i> Solicitar
+            </button>
           </div>
           <div class="precio-card minimal">
-            <h3>Servidor + página de gestión</h3>
+            <div class="precio-icono">
+              <i class="bi bi-hdd-network icono-min"></i>
+            </div>
+            <h3>Servidor + gestión</h3>
             <div class="precio">220€</div>
+            <p class="precio-desc">
+              <i class="bi bi-gear icono-min"></i> Incluye hosting, dominio y
+              panel de gestión personalizado.
+            </p>
+            <button
+              class="btn-minimal-link btn-precio-contacto"
+              onclick="document.getElementById('btn-contacto').click()"
+            >
+              <i class="bi bi-arrow-right-circle icono-min"></i> Solicitar
+            </button>
           </div>
           <div class="precio-card minimal">
-            <h3>Creación de redes sociales, logotipo y marca</h3>
+            <div class="precio-icono">
+              <i class="bi bi-brush icono-min"></i>
+            </div>
+            <h3>Redes sociales, logotipo y marca</h3>
             <div class="precio">50€</div>
+            <p class="precio-desc">
+              <i class="bi bi-person-badge icono-min"></i> Diseño de logotipo,
+              branding y creación de perfiles sociales profesionales.
+            </p>
+            <button
+              class="btn-minimal-link btn-precio-contacto"
+              onclick="document.getElementById('btn-contacto').click()"
+            >
+              <i class="bi bi-arrow-right-circle icono-min"></i> Solicitar
+            </button>
+          </div>
+          <div class="precio-card minimal precio-otros">
+            <div class="precio-icono">
+              <i class="bi bi-stars icono-min"></i>
+            </div>
+            <h3>Otros / A medida</h3>
+            <div
+              class="precio"
+              style="font-size: 1.05rem; color: #444; font-weight: 400"
+            >
+              ¿Necesitas algo diferente?
+            </div>
+            <p class="precio-desc">
+              <i class="bi bi-chat-dots icono-min"></i> Soluciones
+              personalizadas, consúltame sin compromiso.
+            </p>
+            <button
+              class="btn-minimal-link btn-precio-contacto"
+              onclick="document.getElementById('btn-contacto').click()"
+            >
+              <i class="bi bi-arrow-right-circle icono-min"></i> Contactar
+            </button>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="minimal">
+    <footer class="minimal footer-destacado">
       <div>
-        © 2025 FerCueA ·
-        <a href="https://www.instagram.com/aleixofdezcuevas/" target="_blank"
-          >Instagram</a
-        >
+        <i class="bi bi-c-circle icono-min" aria-hidden="true"></i>
+        <span>2025 Aleixo Fdez Cuevas</span>
       </div>
     </footer>
     <script src="script.js"></script>
