--- a/index.html
+++ b/index.html
@@ -3,16 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FerCueA | Desarrollo Web</title>
+    <title>Aleixo Fdez Cuevas | Desarrollo Web</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
+    <meta
+      name="description"
+      content="Portfolio minimalista y profesional de Aleixo Fdez Cuevas: desarrollo web, marca y soluciones digitales a medida."
+    />
+    <meta property="og:title" content="Aleixo Fdez Cuevas | Desarrollo Web" />
+    <meta
+      property="og:description"
+      content="Portfolio minimalista y profesional de Aleixo Fdez Cuevas: desarrollo web, marca y soluciones digitales a medida."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/img/favicon.png" />
+    <meta property="og:url" content="https://tudominio.com" />
+    <link rel="icon" type="image/png" href="/img/favicon.png" />
+    <!-- SEO y metadatos mejorados -->
   </head>
   <body>
     <header class="main-header minimal header-center header-nav-flex">
       <div class="logo">Aleixo Fdez Cuevas</div>
+      <a
+        href="#proyectos"
+        class="visually-hidden-focusable"
+        aria-label="Ir a proyectos"
+      ></a>
+      <a
+        href="#servicios"
+        class="visually-hidden-focusable"
+        aria-label="Ir a servicios"
+      ></a>
+      <a
+        href="#btn-contacto"
+        class="visually-hidden-focusable"
+        aria-label="Ir a contacto"
+      ></a>
     </header>
 
     <main>
@@ -63,7 +92,7 @@
 
       <section class="proyectos minimal" id="proyectos">
         <h2><i class="bi bi-folder2-open icono-min"></i> Proyectos</h2>
-        <div class="proyectos-grid minimal">
+        <div class="proyectos-grid minimal fadein-on-scroll">
           <div class="proyecto-card minimal">
             <div class="proyecto-header">
               <i class="bi bi-briefcase icono-min"></i>
@@ -109,15 +138,25 @@
         </div>
       </section>
 
-      <section class="precios minimal" id="precios">
-        <h2><i class="bi bi-cash-coin icono-min"></i> Precios</h2>
+      <section class="servicios minimal" id="servicios">
+        <h2
+          style="
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 0.5em;
+            text-align: center;
+          "
+        >
+          <i class="bi bi-briefcase icono-min" style="font-size: 1.3em"></i>
+          Servicios
+        </h2>
         <div class="precios-grid minimal">
           <div class="precio-card minimal precio-popular">
             <div class="precio-icono">
               <i class="bi bi-globe icono-min"></i>
             </div>
             <h3>Página web</h3>
-            <div class="precio">100€</div>
             <p class="precio-desc">
               <i class="bi bi-laptop icono-min"></i> Web profesional, responsive
               y optimizada para tu negocio o marca personal.
@@ -134,7 +173,6 @@
               <i class="bi bi-hdd-network icono-min"></i>
             </div>
             <h3>Servidor + gestión</h3>
-            <div class="precio">220€</div>
             <p class="precio-desc">
               <i class="bi bi-gear icono-min"></i> Incluye hosting, dominio y
               panel de gestión personalizado.
@@ -151,7 +189,6 @@
               <i class="bi bi-brush icono-min"></i>
             </div>
             <h3>Redes sociales, logotipo y marca</h3>
-            <div class="precio">50€</div>
             <p class="precio-desc">
               <i class="bi bi-person-badge icono-min"></i> Diseño de logotipo,
               branding y creación de perfiles sociales profesionales.
@@ -168,12 +205,6 @@
               <i class="bi bi-stars icono-min"></i>
             </div>
             <h3>Otros / A medida</h3>
-            <div
-              class="precio"
-              style="font-size: 1.05rem; color: #444; font-weight: 400"
-            >
-              ¿Necesitas algo diferente?
-            </div>
             <p class="precio-desc">
               <i class="bi bi-chat-dots icono-min"></i> Soluciones
               personalizadas, consúltame sin compromiso.
@@ -194,7 +225,31 @@
         <i class="bi bi-c-circle icono-min" aria-hidden="true"></i>
         <span>2025 Aleixo Fdez Cuevas</span>
       </div>
+      <div class="footer-social">
+        <a
+          href="https://www.linkedin.com/in/aleixo-fernandez-cuevas-395a52367/"
+          target="_blank"
+          aria-label="LinkedIn"
+          class="footer-icon-link"
+          ><i class="bi bi-linkedin"></i
+        ></a>
+        <a
+          href="https://github.com/FerCueA"
+          target="_blank"
+          aria-label="GitHub"
+          class="footer-icon-link"
+          ><i class="bi bi-github"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/aleixofdezcuevas/"
+          target="_blank"
+          aria-label="Instagram"
+          class="footer-icon-link"
+          ><i class="bi bi-instagram"></i
+        ></a>
+      </div>
     </footer>
     <script src="script.js"></script>
+    <script src="scroll-anim.js"></script>
   </body>
 </html>
