--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <button
               class="btn-minimal-link btn-precio-contacto"
               onclick="document.getElementById('btn-contacto').click()"
+              aria-label="Solicitar información sobre página web"
             >
               <i class="bi bi-arrow-right-circle icono-min"></i> Solicitar
             </button>
@@ -180,6 +181,7 @@
             <button
               class="btn-minimal-link btn-precio-contacto"
               onclick="document.getElementById('btn-contacto').click()"
+              aria-label="Solicitar información sobre servidor y gestión"
             >
               <i class="bi bi-arrow-right-circle icono-min"></i> Solicitar
             </button>
@@ -196,6 +198,7 @@
             <button
               class="btn-minimal-link btn-precio-contacto"
               onclick="document.getElementById('btn-contacto').click()"
+              aria-label="Solicitar información sobre logotipo y redes sociales"
             >
               <i class="bi bi-arrow-right-circle icono-min"></i> Solicitar
             </button>
@@ -212,6 +215,7 @@
             <button
               class="btn-minimal-link btn-precio-contacto"
               onclick="document.getElementById('btn-contacto').click()"
+              aria-label="Solicitar información sobre servicios a medida"
             >
               <i class="bi bi-arrow-right-circle icono-min"></i> Contactar
             </button>
@@ -250,6 +254,5 @@
       </div>
     </footer>
     <script src="script.js"></script>
-    <script src="scroll-anim.js"></script>
   </body>
 </html>
