--- a/index.html
+++ b/index.html
@@ -222,6 +222,55 @@
           </div>
         </div>
       </section>
+
+      <section class="certificados minimal fadein-on-scroll" id="certificados">
+        <h2
+          style="
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 0.5em;
+            text-align: center;
+          "
+        >
+          <i class="bi bi-award icono-min" style="font-size: 1.3em"></i>
+          Certificados & Cursos
+        </h2>
+        <div class="certificados-grid">
+          <div class="certificado-card minimal">
+            <div class="certificado-icono">
+              <i class="bi bi-mortarboard icono-min"></i>
+            </div>
+            <h3>Ciclo Superior de Desarrollo de Aplicaciones Web</h3>
+            <p class="certificado-desc">
+              IES El Rincón · Las Palmas de Gran Canaria
+            </p>
+            <a
+              href="https://ieselrincon.es/"
+              class="btn-minimal-link"
+              target="_blank"
+              aria-label="Ver información del IES El Rincón"
+            >
+              <i class="bi bi-box-arrow-up-right icono-min"></i> Más información
+            </a>
+          </div>
+          <div class="certificado-card minimal">
+            <div class="certificado-icono">
+              <i class="bi bi-linkedin icono-min"></i>
+            </div>
+            <h3>Todos los certificados</h3>
+            <p class="certificado-desc">LinkedIn · Perfil completo</p>
+            <a
+              href="https://www.linkedin.com/in/aleixo-fernandez-cuevas-395a52367/details/certifications/"
+              target="_blank"
+              class="btn-minimal-link"
+              aria-label="Ver todos los certificados en LinkedIn"
+            >
+              <i class="bi bi-box-arrow-up-right icono-min"></i> Ver en LinkedIn
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="minimal footer-destacado">
