--- a/index.html
+++ b/index.html
@@ -117,9 +117,13 @@
                   width: 100%;
                   height: 320px;
                   border-radius: 1.2em;
+                  pointer-events: none; /* No interactuable */
+                  touch-action: none; /* No interactuable en móvil */
                 "
                 onload="this.style.opacity=1;this.previousElementSibling.style.display='none';"
                 sandbox="allow-scripts allow-same-origin allow-forms allow-popups"
+                tabindex="-1"
+                aria-hidden="true"
               ></iframe>
             </div>
             <p class="proyecto-desc">
@@ -261,7 +265,7 @@
             <h3>Todos los certificados</h3>
             <p class="certificado-desc">LinkedIn · Perfil completo</p>
             <a
-              href="https://www.linkedin.com/in/aleixo-fernandez-cuevas-395a52367/details/certifications/"
+              href="https://www.linkedin.com/in/aleixo-fernandez-cuevas-395a52367/"
               target="_blank"
               class="btn-minimal-link"
               aria-label="Ver todos los certificados en LinkedIn"
