--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
         <div class="hero-content-minimal">
           <h1>Haz que tu proyecto destaque</h1>
           <p class="hero-desc">
-            Desarrollo web, marca y redes sociales con un enfoque minimalista y
-            profesional.<br />
+            Desarrollo web, marca y redes sociales con un toque profesional.<br />
             Soluciones digitales a tu medida.
           </p>
           <a href="#" class="btn-minimal-hero" id="btn-contacto">
@@ -165,13 +164,6 @@
               <i class="bi bi-laptop icono-min"></i> Web profesional, responsive
               y optimizada para tu negocio o marca personal.
             </p>
-            <button
-              class="btn-minimal-link btn-precio-contacto"
-              onclick="document.getElementById('btn-contacto').click()"
-              aria-label="Solicitar información sobre página web"
-            >
-              <i class="bi bi-arrow-right-circle icono-min"></i> Solicitar
-            </button>
           </div>
           <div class="precio-card minimal">
             <div class="precio-icono">
@@ -182,13 +174,6 @@
               <i class="bi bi-gear icono-min"></i> Incluye hosting, dominio y
               panel de gestión personalizado.
             </p>
-            <button
-              class="btn-minimal-link btn-precio-contacto"
-              onclick="document.getElementById('btn-contacto').click()"
-              aria-label="Solicitar información sobre servidor y gestión"
-            >
-              <i class="bi bi-arrow-right-circle icono-min"></i> Solicitar
-            </button>
           </div>
           <div class="precio-card minimal">
             <div class="precio-icono">
@@ -199,13 +184,6 @@
               <i class="bi bi-person-badge icono-min"></i> Diseño de logotipo,
               branding y creación de perfiles sociales profesionales.
             </p>
-            <button
-              class="btn-minimal-link btn-precio-contacto"
-              onclick="document.getElementById('btn-contacto').click()"
-              aria-label="Solicitar información sobre logotipo y redes sociales"
-            >
-              <i class="bi bi-arrow-right-circle icono-min"></i> Solicitar
-            </button>
           </div>
           <div class="precio-card minimal precio-otros">
             <div class="precio-icono">
@@ -216,14 +194,17 @@
               <i class="bi bi-chat-dots icono-min"></i> Soluciones
               personalizadas, consúltame sin compromiso.
             </p>
-            <button
-              class="btn-minimal-link btn-precio-contacto"
-              onclick="document.getElementById('btn-contacto').click()"
-              aria-label="Solicitar información sobre servicios a medida"
-            >
-              <i class="bi bi-arrow-right-circle icono-min"></i> Contactar
-            </button>
           </div>
+        </div>
+        <div class="servicios-boton-wrapper">
+          <button
+            class="btn-minimal-hero btn-precio-contacto"
+            onclick="document.getElementById('btn-contacto').click()"
+            aria-label="Contactar para solicitar servicios"
+          >
+            <i class="bi bi-chat-dots icono-min"></i> Contacta
+            <span class="arrow-icon" aria-hidden="true">→</span>
+          </button>
         </div>
       </section>
 
