--- a/index.html
+++ b/index.html
@@ -104,17 +104,31 @@
               <i class="bi bi-lightning-charge icono-min"></i><span>JS</span>
             </div>
             <div class="preview-proyecto-wrapper">
-              <div class="skeleton-loader"></div>
-              <iframe
-                src="https://alvarog.netlify.app/"
-                title="Previsualización AlvaroG"
-                class="preview-proyecto preview-proyecto-iframe"
-                loading="lazy"
-                onload="this.style.opacity=1;this.previousElementSibling.style.display='none';"
-                sandbox="allow-scripts allow-same-origin allow-forms allow-popups"
-                tabindex="-1"
-                aria-hidden="true"
-              ></iframe>
+              <div
+                class="preview-proyecto-static"
+                style="
+                  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+                  color: white;
+                  display: flex;
+                  align-items: center;
+                  justify-content: center;
+                  font-size: 0.9rem;
+                  text-align: center;
+                  padding: 1rem;
+                  border-radius: 8px;
+                  height: 200px;
+                "
+              >
+                <div>
+                  <i
+                    class="bi bi-globe icono-min"
+                    style="font-size: 2rem; margin-bottom: 0.5rem"
+                  ></i>
+                  <p style="margin: 0">
+                    Vista previa disponible<br />en el enlace del proyecto
+                  </p>
+                </div>
+              </div>
             </div>
             <p class="proyecto-desc">
               <i class="bi bi-card-text icono-min"></i> Página web minimalista
