--- a/index.html
+++ b/index.html
@@ -97,29 +97,10 @@
               <i class="bi bi-lightning-charge icono-min"></i><span>JS</span>
             </div>
             <div class="preview-proyecto-wrapper">
-              <div
-                class="preview-proyecto-static"
-                style="
-                  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-                  color: white;
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
-                  font-size: 0.9rem;
-                  text-align: center;
-                  padding: 1rem;
-                  border-radius: 8px;
-                  height: 200px;
-                "
-              >
+              <div class="preview-proyecto-static">
                 <div>
-                  <i
-                    class="bi bi-globe icono-min"
-                    style="font-size: 2rem; margin-bottom: 0.5rem"
-                  ></i>
-                  <p style="margin: 0">
-                    Vista previa disponible<br />en el enlace del proyecto
-                  </p>
+                  <i class="bi bi-globe icono-min preview-icon"></i>
+                  <p>Vista previa disponible<br />en el enlace del proyecto</p>
                 </div>
               </div>
             </div>
