--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <meta property="og:url" content="https://tudominio.com" />
     <link rel="icon" type="image/png" href="/img/favicon.png" />
     <!-- SEO y metadatos mejorados -->
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="1e5617ab-8abc-4d70-8ebd-c8a44efdc9cf"
+    ></script>
   </head>
   <body>
     <header class="main-header minimal header-center header-nav-flex">
