--- a/index.html
+++ b/index.html
@@ -184,10 +184,11 @@
               <i class="bi bi-lightning-charge icono-min"></i><span>JS</span>
             </div>
             <div class="preview-proyecto-wrapper">
-              <div class="preview-proyecto-static">
-                <div>
-                  <i class="bi bi-globe icono-min preview-icon"></i>
-                  <p>Vista previa disponible<br />en el enlace del proyecto</p>
+              <div class="preview-proyecto-image">
+                <img src="img/alvaro.png" alt="Vista previa del proyecto AlvaroG - Osteópata" loading="lazy">
+                <div class="image-overlay">
+                  <i class="bi bi-eye icono-min"></i>
+                  <span>Ver proyecto</span>
                 </div>
               </div>
             </div>
@@ -216,10 +217,11 @@
               <i class="bi bi-lightning-charge icono-min"></i><span>JS</span>
             </div>
             <div class="preview-proyecto-wrapper">
-              <div class="preview-proyecto-static">
-                <div>
-                  <i class="bi bi-globe icono-min preview-icon"></i>
-                  <p>Vista previa disponible<br />en el enlace del proyecto</p>
+              <div class="preview-proyecto-image">
+                <img src="img/restaurante.png" alt="Vista previa del proyecto Menú QR Restaurante" loading="lazy">
+                <div class="image-overlay">
+                  <i class="bi bi-eye icono-min"></i>
+                  <span>Ver proyecto</span>
                 </div>
               </div>
             </div>
