--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+      media="print"
+      onload="this.media='all'"
     />
+    <noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"></noscript>
     
     <!-- SEO Mejorado -->
     <meta
@@ -71,9 +74,6 @@
 
     <!-- Progress bar de scroll -->
     <div class="scroll-progress" id="scroll-progress"></div>
-
-    <!-- Partículas flotantes -->
-    <div class="particles-container" id="particles-container"></div>
 
     <!-- Botón volver arriba -->
     <button class="scroll-to-top" id="scroll-to-top" aria-label="Volver arriba">
