--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="Aleixo Fdez Cuevas | Desarrollo Web Profesional" />
     <meta property="og:description" content="Especialista en desarrollo web y diseño de marca. Creamos soluciones digitales profesionales y personalizadas para tu negocio." />
     <meta property="og:image" content="/img/favicon.png" />
-    <meta property="og:url" content="https://aleixofdezcuevas.com" />
+    <meta property="og:url" content="https://aleixofdezcuevas.es" />
     <meta property="og:site_name" content="Aleixo Fdez Cuevas - Portfolio" />
     
     <!-- Twitter Card -->
@@ -48,7 +48,7 @@
       "name": "Aleixo Fdez Cuevas",
       "jobTitle": "Desarrollador Web",
       "description": "Especialista en desarrollo web y diseño de marca",
-      "url": "https://aleixofdezcuevas.com",
+      "url": "https://aleixofdezcuevas.es",
       "sameAs": [
         "https://www.linkedin.com/in/aleixo-fernandez-cuevas-395a52367/",
         "https://github.com/FerCueA",
